# simple_nostr_client

./: Cargo.toml
src/: lib.rs
tests/: client.rs  utils.rs
